[gd_scene load_steps=23 format=2]

[ext_resource path="res://Resources/WorldEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://Resources/glitch_effect.shader" type="Shader" id=2]
[ext_resource path="res://Art/UI/Font/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Levels/Level.gd" type="Script" id=4]
[ext_resource path="res://Art/FX/BlackScreen.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/Lower Frame.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/S.png" type="Texture" id=7]
[ext_resource path="res://Art/UI/Screen.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MultiCam.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Electric Gate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Tiles/Normal Tile.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Tiles/Goal Tile.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Bot.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/LR.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Spikes.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Tiles/Static Tile.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=1]
resource_name = "ZoomOut"
tracks/0/type = "value"
tracks/0/path = NodePath("MultiCam:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.95, 0.95 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Upper Frame:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ 250.0, 40.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Lower Frame:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ -250.0, -40.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Upper Frame:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Lower Frame:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Upper Frame:margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ 40.0, 250.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lower Frame:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ -40.0, -250.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Upper Frame:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lower Frame:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 1.0
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="Level 07" type="Node2D"]
script = ExtResource( 4 )
levelName = "Fin"
levelNumber = "07"
nextLevelPath = "res://Levels/Main Menu.tscn"

[node name="CamPlayer" type="AnimationPlayer" parent="."]
anims/ZoomOut = SubResource( 1 )

[node name="MultiCam" parent="." instance=ExtResource( 9 )]
position = Vector2( 256, 224 )
zoom = Vector2( 0.4, 0.4 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
targets = [ "Cam Target" ]

[node name="Cam Target" type="Position2D" parent="."]
position = Vector2( 256, 128 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( -64, 32 )

[node name="Tiles" type="YSort" parent="YSort"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Goal Tile" parent="YSort/Tiles" instance=ExtResource( 12 )]
position = Vector2( 160, 48 )

[node name="Normal Tile" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 192, 64 )

[node name="Normal Tile2" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 224, 80 )

[node name="Normal Tile21" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 256, 64 )

[node name="Normal Tile31" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 288, 80 )

[node name="Normal Tile22" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 160, 112 )

[node name="Normal Tile42" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 128, 96 )

[node name="Normal Tile35" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 320, 32 )

[node name="Normal Tile49" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 480, 48 )

[node name="Normal Tile52" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 512, 32 )

[node name="Normal Tile54" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 544, 48 )

[node name="Normal Tile58" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 512, -32 )

[node name="Normal Tile60" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 448, 128 )

[node name="Normal Tile57" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 416, 16 )

[node name="Normal Tile53" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 480, 16 )

[node name="Normal Tile51" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 448, 32 )

[node name="Normal Tile55" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 448, 0 )

[node name="Normal Tile56" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 480, -16 )

[node name="Normal Tile50" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 512, 64 )

[node name="Normal Tile44" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 288, 48 )

[node name="Normal Tile36" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 352, 48 )

[node name="Normal Tile39" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 256, 96 )

[node name="Normal Tile43" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 448, 64 )

[node name="Normal Tile27" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 320, 64 )

[node name="Normal Tile29" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 160, 144 )

[node name="Normal Tile20" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 128, 128 )

[node name="Normal Tile3" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 192, 128 )

[node name="Normal Tile23" parent="YSort/Tiles" instance=ExtResource( 11 )]
position = Vector2( 224, 112 )

[node name="Static Tile8" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 320, 128 )

[node name="Static Tile13" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 352, 144 )

[node name="Static Tile14" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 384, 160 )

[node name="Static Tile15" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 384, 64 )

[node name="Static Tile16" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 352, 80 )

[node name="Static Tile17" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 416, 80 )

[node name="Static Tile18" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 384, 96 )

[node name="Static Tile19" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 448, 96 )

[node name="Static Tile20" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 416, 112 )

[node name="Static Tile27" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 448, 160 )

[node name="Static Tile29" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 480, 144 )

[node name="Static Tile21" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 224, 144 )

[node name="Static Tile22" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 192, 160 )

[node name="Static Tile28" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 416, 176 )

[node name="Static Tile23" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 256, 160 )

[node name="Static Tile24" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 224, 176 )

[node name="Static Tile25" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 288, 176 )

[node name="Static Tile26" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 256, 192 )

[node name="Static Tile11" parent="YSort/Tiles" instance=ExtResource( 16 )]
position = Vector2( 288, 112 )

[node name="Objects" type="YSort" parent="YSort"]

[node name="Bot" parent="YSort/Objects" instance=ExtResource( 13 )]
position = Vector2( 224, 192 )

[node name="Electric Gate" parent="YSort/Objects" instance=ExtResource( 10 )]
position = Vector2( 192, 64 )

[node name="Electric Gate3" parent="YSort/Objects" instance=ExtResource( 10 )]
position = Vector2( 448, 160 )
scale = Vector2( -1, 1 )

[node name="Electric Gate2" parent="YSort/Objects" instance=ExtResource( 10 )]
position = Vector2( 448, 64 )
scale = Vector2( -1, 1 )

[node name="Spikes" type="YSort" parent="YSort"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Spikes" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 288, 112 )
state = 1

[node name="Spikes4" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 320, 128 )

[node name="Spikes3" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 384, 160 )
state = 1

[node name="Spikes5" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 320, 32 )
state = 2

[node name="Spikes6" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 256, 64 )
state = 2

[node name="Spikes12" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 128, 128 )
state = 2

[node name="Spikes15" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 224, 144 )
state = 2

[node name="Spikes19" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 352, 80 )
state = 2

[node name="Spikes20" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 416, 80 )
state = 2

[node name="Spikes16" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 288, 176 )
state = 2

[node name="Spikes10" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 224, 80 )
state = 1

[node name="Spikes13" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 160, 112 )
state = 1

[node name="Spikes17" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 256, 160 )
state = 1

[node name="Spikes21" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 384, 64 )
state = 1

[node name="Spikes22" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 448, 96 )
state = 1

[node name="Spikes18" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 256, 192 )
state = 1

[node name="Spikes14" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 288, 48 )
state = 1

[node name="Spikes8" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 352, 144 )
state = 2

[node name="Spikes9" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 416, 176 )
state = 2

[node name="Spikes11" parent="YSort/Spikes" instance=ExtResource( 15 )]
position = Vector2( 256, 96 )

[node name="LR" type="YSort" parent="YSort"]

[node name="LR2" parent="YSort/LR" instance=ExtResource( 14 )]
position = Vector2( 512, 32 )

[node name="LR" parent="YSort/LR" instance=ExtResource( 14 )]
position = Vector2( 128, 96 )

[node name="Gameplay HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="UI_Player" type="AnimationPlayer" parent="Gameplay HUD"]
anims/Glitch = SubResource( 2 )
anims/LevelIntro = SubResource( 3 )
anims/LevelOutro = SubResource( 4 )

[node name="Glitch" type="TextureRect" parent="Gameplay HUD"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Upper Frame" type="TextureRect" parent="Gameplay HUD"]
modulate = Color( 1, 1, 1, 0.666667 )
anchor_right = 1.0
margin_left = -8.0
margin_bottom = 40.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Lower Frame" type="TextureRect" parent="Gameplay HUD"]
modulate = Color( 1, 1, 1, 0.666667 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 12.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Charge Level" type="Label" parent="Gameplay HUD"]
margin_left = 44.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.584314, 0.690196, 1, 1 )
text = ": 0"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Gameplay HUD"]
margin_left = 381.291
margin_top = 4.56712
margin_right = 607.291
margin_bottom = 24.5671
grow_horizontal = 2
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.741176, 0.584314, 1 )
text = "Level Title"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="S" type="TextureRect" parent="Gameplay HUD"]
margin_left = 10.9602
margin_right = 50.9602
margin_bottom = 41.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="CamFX" from="YSort/Objects/Bot" to="." method="_on_Bot_CamFX"]
[connection signal="reachedGoal" from="YSort/Objects/Bot" to="." method="_on_Bot_reachedGoal"]
[connection signal="step" from="YSort/Objects/Bot" to="." method="_on_Bot_step"]
[connection signal="camfx2" from="YSort/LR/LR2" to="." method="_on_LR_camfx2"]
[connection signal="camfx2" from="YSort/LR/LR" to="." method="_on_LR_camfx2"]
[connection signal="animation_finished" from="Gameplay HUD/UI_Player" to="." method="_on_UI_Player_animation_finished"]
